Add test that we can pull in things from parent classes in the same namespace
 - Updated to dev-master definition-finder to make this test pass
 - Depend on systemlib-extractor temporarily for hack to be happy with
   definition-finder's test suite (not included in releases)

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "fredemmott/hack-router": "dev-master",
         "facebook/hack-codegen": "^1.1",
-        "fredemmott/definition-finder": "^1.2"
+        "fredemmott/definition-finder": "dev-master",
+        "hhvm/systemlib-extractor": "^0.1.0"
     },
     "require-dev": {
         "91carriage/phpunit-hhi": "^5.5",
