--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "fredemmott/hack-router": "dev-master",
         "facebook/hack-codegen": "^1.1",
-        "fredemmott/definition-finder": "dev-master",
+        "fredemmott/definition-finder": "^1.3.0",
         "hhvm/systemlib-extractor": "^0.1.0"
     },
     "require-dev": {
