--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "fredemmott/hack-router": "dev-master",
         "facebook/hack-codegen": "^1.1",
         "fredemmott/definition-finder": "^1.3.0",
-        "hhvm/systemlib-extractor": "^0.1.0"
+        "hhvm/systemlib-extractor": "^0.1.0",
+        "fredemmott/type-assert": "^0.2.0"
     },
     "require-dev": {
         "91carriage/phpunit-hhi": "^5.5",
