--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,9 @@
     "keywords": ["hack", "router", "routing", "hhvm"],
     "homepage": "https://github.com/fredemmott/hack-router-codegen",
     "require": {
-        "fredemmott/hack-router": "dev-master",
+        "fredemmott/hack-router": "^1.0.0rc6",
         "facebook/hack-codegen": "^1.1",
         "fredemmott/definition-finder": "^1.3.0",
-        "hhvm/systemlib-extractor": "^0.1.0",
         "fredemmott/type-assert": "^0.2.0"
     },
     "require-dev": {
