Mark dev-master as 1.x-dev

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
         "91carriage/phpunit-hhi": "^5.5",
         "phpunit/phpunit": "^5.5"
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.x-dev"
+        }
+    },
     "autoload": {
       "classmap": [ "src/" ]
     },
