--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "fredemmott/hack-router-codegen",
+    "name": "facebook/hack-router-codegen",
     "description": "URI routing for Hack with codegen",
     "keywords": ["hack", "router", "routing", "hhvm"],
-    "homepage": "https://github.com/fredemmott/hack-router-codegen",
+    "homepage": "https://github.com/hhvm/hack-router-codegen",
     "require": {
-        "fredemmott/hack-router": "^1.0.0rc7",
+        "facebook/hack-router": "^1.0.0rc7",
         "facebook/hack-codegen": "^1.1",
-        "fredemmott/definition-finder": "^1.3.0",
+        "facebook/definition-finder": "^1.3.0",
         "fredemmott/type-assert": "^0.2.0 || ^1.0"
     },
     "require-dev": {
