--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "homepage": "https://github.com/hhvm/hack-router-codegen",
     "require": {
         "facebook/hack-router": "^1.0.0rc7",
-        "facebook/hack-codegen": "^2.1.0",
+        "facebook/hack-codegen": "dev-master",
         "facebook/definition-finder": "^1.3.0",
         "fredemmott/type-assert": "^0.2.0 || ^1.0"
     },
