use new type-assert

--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "require": {
         "facebook/hack-router": "^0.9",
         "facebook/hack-codegen": "^2.2.0",
-        "facebook/definition-finder": "^1.3.0",
-        "fredemmott/type-assert": "^0.2.0 || ^1.0"
+        "facebook/definition-finder": "^1.5.3",
+        "hhvm/type-assert": "^3.0"
     },
     "require-dev": {
         "91carriage/phpunit-hhi": "^5.5",
