--- a/.hhconfig
+++ b/.hhconfig
@@ -4,3 +4,4 @@ ignored_paths = [ "vendor/.+/tests/.+" ]
 safe_array = true
 safe_vector_array = true
 disallow_destruct = true
+forward_compatibility_level=3.27
