--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "hhvm/type-assert": "^3.0"
     },
     "require-dev": {
+        "facebook/fbexpect": "^1.1.0",
         "91carriage/phpunit-hhi": "^5.5",
         "phpunit/phpunit": "^5.5",
         "hhvm/hhast": "^3.26"
