--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
     "homepage": "https://github.com/hhvm/hack-router-codegen",
     "require": {
         "hhvm": "^3.28.0",
-        "facebook/hack-router": ">=0.14",
-        "facebook/hack-codegen": "^3.0.1",
+        "facebook/hack-router": "dev-master",
+        "facebook/hack-http-request-response-interfaces": "dev-master",
+        "facebook/hack-codegen": "^4.0",
         "facebook/definition-finder": "^2.0",
         "hhvm/type-assert": "^3.0"
     },
