update dependencies, test with static local banned on 4.1

--- a/.hhconfig
+++ b/.hhconfig
@@ -7,3 +7,4 @@ decl_override_require_hint=true
 enable_experimental_tc_features=shape_field_check,sealed_classes
 user_attributes=
 disable_primitive_refinement=true
+disable_static_local_variables = true
