--- a/.hhconfig
+++ b/.hhconfig
@@ -8,3 +8,4 @@ enable_experimental_tc_features=shape_field_check,sealed_classes
 user_attributes=
 disable_primitive_refinement=true
 disable_static_local_variables = true
+disallow_array_literal = true
