--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "hhvm": "^4.25",
         "facebook/hack-router": "^0.19",
-        "facebook/hack-http-request-response-interfaces": "^0.2",
+        "facebook/hack-http-request-response-interfaces": "^0.2|^0.3",
         "facebook/hack-codegen": "^4.1.0",
         "facebook/definition-finder": "^2.7",
         "hhvm/type-assert": "^3.0"
