--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "facebook/hack-http-request-response-interfaces": "^0.2|^0.3",
         "facebook/hack-codegen": "^4.1.0",
         "facebook/definition-finder": "^2.7",
-        "hhvm/type-assert": "^3.0"
+        "hhvm/type-assert": "^3.0|^4.0"
     },
     "require-dev": {
         "hhvm/hhast": "^4.6",
