--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,10 @@
     },
     "autoload-dev": {
       "classmap": [ "tests/" ]
+    },
+    "config": {
+      "allow-plugins": {
+        "hhvm/hhvm-autoload": true
+      }
     }
 }
